Squish the bug that does not allow scroll after update survey by adding scroll...hopefully Took out or commented out console logs and un-used code

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -121,7 +121,9 @@ p {
 .modal-title {
   font-size: 2rem;
 }
-
+.modal-open {
+  overflow: scroll;
+}
 #my-survey-content {
   margin: 1rem auto;
   // width: 75%;
